# laser-dxf-web

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: clawbot.py  config.py  converter.py  dingtalk_client.py  doubao_normalizer.py  doubao_prompt.py  feishu_client.py  handlers.py  main.py  preview.py  skew_correction.py
app/static/: index.html  manifest.json  sw.js
docs/superpowers/plans/: 2026-06-23-feishu-laser-dxf-bot.md  2026-06-24-feishu-doubao-normalizer.md
docs/superpowers/specs/: 2026-06-23-feishu-laser-dxf-bot-design.md  2026-06-24-feishu-doubao-normalizer-design.md
tests/: conftest.py  test_config.py  test_converter.py  test_doubao_normalizer.py  test_doubao_prompt.py  test_feishu_client.py  test_handlers.py  test_handlers_doubao_integration.py  test_preview.py
