[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laser-dxf-web"
version = "1.0.0"
description = "PWA web app for converting images to laser-ready DXF files."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "matplotlib>=3.8",
    "Pillow>=10.0",
    "openai>=1.40",
    "httpx>=0.27",
    "pycryptodome>=3.20",
    "qrcode>=7.4",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-mock>=3.12"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
